fix: Fixed information section subtext alignment

--- a/styles.css
+++ b/styles.css
@@ -135,9 +135,9 @@ body {
   
 }
 
-.info-sub-container {
-  display: flex;
-  vertical-align: top;
+.info-sub-container{
+  max-width: 160px;
+  margin-left: 30px;
 }
 
 .info-text {
@@ -153,6 +153,7 @@ body {
 .info-subtext {
   font-size: 14px;
   text-align: center;
+  
 }
 
 .info-image {
@@ -161,7 +162,8 @@ body {
   border: solid;
   border-color: #3882F6;
   border-radius: 10px;
-
+  display: flex;
+  justify-self: center;
 }
 
 .quote-section {
